--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,10 @@
 
     <script src="js/new-item-controller.js"></script>
 
+    <script src="js/players.js"></script>
+    <script src="js/players-controller.js"></script>
+    <script src="js/players-service.js"></script>
+
     <script src="js/pads.js"></script>
     <script src="js/pads-controller.js"></script>
     <script src="js/pads-service.js"></script>
