--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/constants.js"></script>
     <script src="js/controllers.js"></script>
 
     <script src="js/new-item-controller.js"></script>
