fix(app): it is now possible to create new players, pads and helmets. It is also possible to assign a pad or helmet to a user. This is the first draft version of the app

--- a/www/index.html
+++ b/www/index.html
@@ -24,8 +24,6 @@
     <script src="js/constants.js"></script>
     <script src="js/controllers.js"></script>
 
-    <script src="js/new-item-controller.js"></script>
-
     <script src="js/players.js"></script>
     <script src="js/players-controller.js"></script>
     <script src="js/players-service.js"></script>
@@ -33,6 +31,10 @@
     <script src="js/pads.js"></script>
     <script src="js/pads-controller.js"></script>
     <script src="js/pads-service.js"></script>
+
+    <script src="js/helmets.js"></script>
+    <script src="js/helmets-controllers.js"></script>
+    <script src="js/helmets-services.js"></script>
   </head>
 
   <body ng-app="starter">
